# odl-nb-open-prescribing

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  ci.yml
docs/: conf.py  index.rst  requirements.txt
scripts/: style.sh  test.sh
src/nb_open_prescribing/: __init__.py  api.py  model.py  skeleton.py  ui.py  util.py
tests/: conftest.py  test_api.py  test_model.py  test_skeleton.py  test_ui.py  test_util.py
tests/data/: boundaries.json  spend.json
