[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = "^docs/.*"

[[tool.mypy.overrides]]
module = [
    "ipywidgets.*",
    "ipyleaflet.*",
    "pandas.*",
]
ignore_missing_imports = true

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
