[tool.poetry]
name = "nb-open-prescribing"
version = "0.1.0"
description = "Open Prescribing CCG data explorer."
license = "MIT"
authors = [
    "Sam Scott <sam.scott7@me.com>",
]
readme = "README.md"
repository = "https://github.com/samscotty/odl-nb-open-prescribing"

[tool.poetry.dependencies]
python = "3.9.10"
ipython = "^8.3.0"
ipyleaflet = "^0.16.0"
ipywidgets = "^7.7.0"
matplotlib = "^3.5.3"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
types-requests = "^2.27.27"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.mypy]
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "ipywidgets.*",
    "ipyleaflet.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
 addopts = "--cov nb_open_prescribing --cov-report term-missing --verbose"
 junit_family = "xunit2"
 markers = [
    "json_response: marker to pass test JSON response data to fixtures",
 ]